; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_bsd_stubs.c_cdevsw_setkqueueok.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_bsd_stubs.c_cdevsw_setkqueueok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdevsw = type { i32 }

@CDEVSW_SELECT_KQUEUE = common dso_local global i32 0, align 4
@nchrdev = common dso_local global i32 0, align 4
@cdevsw = common dso_local global %struct.cdevsw* null, align 8
@cdevsw_flags = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cdevsw_setkqueueok(i32 %0, %struct.cdevsw* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.cdevsw*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.cdevsw*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.cdevsw* %1, %struct.cdevsw** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* @CDEVSW_SELECT_KQUEUE, align 4
  store i32 %10, i32* %9, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @nchrdev, align 4
  %16 = icmp sge i32 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13, %3
  store i32 -1, i32* %4, align 4
  br label %39

18:                                               ; preds = %13
  %19 = load %struct.cdevsw*, %struct.cdevsw** @cdevsw, align 8
  %20 = load i32, i32* %5, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.cdevsw, %struct.cdevsw* %19, i64 %21
  store %struct.cdevsw* %22, %struct.cdevsw** %8, align 8
  %23 = load %struct.cdevsw*, %struct.cdevsw** %8, align 8
  %24 = bitcast %struct.cdevsw* %23 to i8*
  %25 = load %struct.cdevsw*, %struct.cdevsw** %6, align 8
  %26 = bitcast %struct.cdevsw* %25 to i8*
  %27 = call i64 @memcmp(i8* %24, i8* %26, i32 4)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %18
  store i32 -1, i32* %4, align 4
  br label %39

30:                                               ; preds = %18
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %9, align 4
  %33 = or i32 %32, %31
  store i32 %33, i32* %9, align 4
  %34 = load i32, i32* %9, align 4
  %35 = load i32*, i32** @cdevsw_flags, align 8
  %36 = load i32, i32* %5, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %35, i64 %37
  store i32 %34, i32* %38, align 4
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %30, %29, %17
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i64 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
